--- a/bookmark-landing-page-master/css/styles.css
+++ b/bookmark-landing-page-master/css/styles.css
@@ -1,5 +1,134 @@
 /*Navbar Section*/
 
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 10vh;
+    font-family: 'Rubik', sans-serif;
+}
+
+@media screen and (max-width:768px) {
+    nav {
+        background-image: linear-gradient(to right, white, hsl(231, 69%, 60%));
+    }
+    .burger div {
+        background-color: hsl(231, 69%, 60%);
+    }
+}
+
+.nav-links {
+    display: flex;
+    justify-content: space-around;
+    width: 30%;
+}
+
+.nav-links li {
+    list-style: none;
+    margin-top: 30px;
+}
+
+.nav-links li .btn {
+    position: relative;
+    top: -10px;
+    border-color: hsl(0, 94%, 66%);
+}
+
+.nav-links a {
+    color: hsl(229, 31%, 21%);
+    text-decoration: none;
+    letter-spacing: 2px;
+    font-weight: bold;
+    font-size: 18px;
+    transition: all 0.3s ease;
+}
+
+.burger {
+    display: none;
+    cursor: pointer;
+}
+
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: hsl(229, 31%, 21%);
+    margin: 5px;
+}
+
+@media screen and (max-width:768px) {
+    .nav-links {
+        width: 50%;
+    }
+    .nav-links a {
+        align-items: center;
+    }
+}
+
+@media screen and (max-width:768px) {
+    body {
+        overflow-x: hidden;
+    }
+    .nav-links {
+        position: absolute;
+        right: 0px;
+        height: 92vh;
+        top: 10vh;
+        background-image: linear-gradient(to right, white, hsl(231, 69%, 60%));
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+    .nav-links li {
+        opacity: 0;
+    }
+    .nav-links a {
+        color: white;
+    }
+    .burger {
+        display: block;
+    }
+    .nav-links li .btn {
+        color: white;
+        border-color: white;
+    }
+}
+
+.nav-active {
+    transform: translateX(0%);
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+    opacity: 0;
+}
+
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+}
+
 
 /*Top Section*/
 
